src/objects/EMP_Technical_Assistance__c.object
<CustomObject>
    <fields>
        <fullName>Consultant_Signature__c</fullName>
        <label>Consultant Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMP_Technical_Assistance_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMP Technical Assistance Consultant</label>
        <referenceTo>EMP_Consultant__c</referenceTo>
        <relationshipLabel>EMP Technical Assistances</relationshipLabel>
        <relationshipName>EMP_Technical_Assistances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMP_Technical_Assistance__c</fullName>
        <label>EMP Technical Assistance</label>
        <referenceTo>EMP_Farm__c</referenceTo>
        <relationshipLabel>EMP Technical Assistances</relationshipLabel>
        <relationshipName>EMP_Technical_Assistances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIT__c</fullName>
        <label>NIT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Producer_Signature__c</fullName>
        <label>Producer Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Productive_Sector__c</fullName>
        <label>Productive Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plantulacion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compostaje</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendations_Classification__c</fullName>
        <label>Recommendations Classification</label>
        <picklist>
            <picklistValues>
                <fullName>MAYORES, tienen un gran nivel de importancia y deben ser tomadas en cuenta para la próxima visita.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENORES , propenden a la mejora continua del sistema productivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendations_Next_Visit__c</fullName>
        <label>Recommendations Next Visit</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Situation_Property__c</fullName>
        <label>Situation Property</label>
        <picklist>
            <picklistValues>
                <fullName>Buena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Technical Assistances</relationshipLabel>
        <relationshipName>EMP_Technical_Assistances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <description>Vereda</description>
        <label>Village</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Number__c</fullName>
        <label>Visit Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_To__c</fullName>
        <label>Visit To</label>
        <picklist>
            <picklistValues>
                <fullName>Parcela de aprendizaje</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Which__c</fullName>
        <label>Which</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>EMP Technical Assistance</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Technical Assistance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Technical Assistances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>